; ModuleID = '/home/carl/AnghaBench/seafile/daemon/extr_wt-monitor-macos.c_command_read_cb.c'
source_filename = "/home/carl/AnghaBench/seafile/daemon/extr_wt-monitor-macos.c_command_read_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32* }
%struct.TYPE_6__ = type { i32, i32 }

@.str = private unnamed_addr constant [34 x i8] c"[wt mon] failed to read command.\0A\00", align 1
@kCFFileDescriptorReadCallBack = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [47 x i8] c"[wt mon] %ld receive command type=%d, repo=%s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i8*)* @command_read_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @command_read_cb(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  %8 = alloca %struct.TYPE_6__, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.TYPE_7__*
  store %struct.TYPE_7__* %11, %struct.TYPE_7__** %7, align 8
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @seaf_pipe_readn(i32 %16, %struct.TYPE_6__* %8, i32 8)
  store i32 %17, i32* %9, align 4
  %18 = load i32, i32* %9, align 4
  %19 = sext i32 %18 to i64
  %20 = icmp ne i64 %19, 8
  br i1 %20, label %21, label %26

21:                                               ; preds = %3
  %22 = call i32 @seaf_warning(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* @kCFFileDescriptorReadCallBack, align 4
  %25 = call i32 @CFFileDescriptorEnableCallBacks(i32 %23, i32 %24)
  br label %38

26:                                               ; preds = %3
  %27 = call i64 (...) @CFRunLoopGetCurrent()
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 1
  %29 = load i32, i32* %28, align 4
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @seaf_debug(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.1, i64 0, i64 0), i64 %27, i32 %29, i32 %31)
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %34 = call i32 @handle_watch_command(%struct.TYPE_7__* %33, %struct.TYPE_6__* %8)
  %35 = load i32, i32* %4, align 4
  %36 = load i32, i32* @kCFFileDescriptorReadCallBack, align 4
  %37 = call i32 @CFFileDescriptorEnableCallBacks(i32 %35, i32 %36)
  br label %38

38:                                               ; preds = %26, %21
  ret void
}

declare dso_local i32 @seaf_pipe_readn(i32, %struct.TYPE_6__*, i32) #1

declare dso_local i32 @seaf_warning(i8*) #1

declare dso_local i32 @CFFileDescriptorEnableCallBacks(i32, i32) #1

declare dso_local i32 @seaf_debug(i8*, i64, i32, i32) #1

declare dso_local i64 @CFRunLoopGetCurrent(...) #1

declare dso_local i32 @handle_watch_command(%struct.TYPE_7__*, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
